[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "geetools"
version = "1.0.1"
description = "A collection of tools to work with Google Earth Engine Python API"
keywords = [
  "python",
  "geospatial",
  "remote-sensing",
  "google-earth-engine",
  "earthengine"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
requires-python = ">=3.8"
dependencies = [
    "earthengine-api",
    "requests",
    "pandas",
    "geopandas",
    "deprecated",
    "ee-extra",
]

[[project.authors]]
name = "Rodrigo E. Principe"
email = "fitoprincipe82@gmail.com"

[project.license]
text = "MIT"

[project.readme]
file = "README.rst"
content-type = "text/x-rst"

[project.urls]
Homepage = "https://github.com/gee-community/geetools"

[project.optional-dependencies]
"dev" = [
    "pre-commit",
    "nox",
    "commitizen"
]
"test" = [
    "pytest",
    "pytest-sugar",
    "pytest-cov",
    "pytest-deadfixtures",
    "httplib2",
    "pytest-regressions",
    "Pillow",
]
doc = [
  "sphinx>=6.2.1",
  "pydata-sphinx-theme",
  "sphinx-copybutton",
  "sphinx-design",
  "sphinx-autoapi",
  "ipykernel",
  "httplib2",
  "jupyter-sphinx",
  "nbsphinx",
]

[tool.hatch.build.targets.wheel]
only-include = ["geetools"]

[tool.hatch.envs.default]
dependencies = [
  "pre-commit",
  "commitizen",
  "nox"
]
post-install-commands = ["pre-commit install"]

[tool.licensecheck]
using = "PEP631:test;dev;doc"

[tool.ruff]
ignore-init-module-imports = true
fix = true
select = ["E", "F", "W", "I", "D", "RUF"]
extend-exclude = ["geetools/__init__.py", "geetools/tools/_deprecated_imagecollection.py"]
force-exclude = true # to make sure exclude is respected when used via pre-commit
ignore = [
  "E501",  # line too long | Black take care of it
  "D213",  # Multi-line docstring | We use D212
  "E741",  # Ambiguous variable name: `l` | TODO
]

[tool.ruff.flake8-quotes]
docstring-quotes = "double"

[tool.ruff.pydocstyle]
convention = "google"

[tool.ruff.per-file-ignores]
"tests/*" = ["D102"] # Missing docstring in public method | this is test who cares

[tool.pytest.ini_options]
testpaths = "tests"

[tool.coverage.run]
source = ["geetools"]
branch = true

[tool.commitizen]
tag_format = "v$major.$minor.$patch$prerelease"
update_changelog_on_bump = false
version = "1.0.1"
version_files = [
    "pyproject.toml:version",
    "geetools/__init__.py:__version__",
    "docs/conf.py:release",
]

[tool.codespell]
skip = "geetools/tools/*,geetools/classification.py,**/*.ipynb"

[tool.black]
line-length = 100

[tool.mypy]
scripts_are_modules = true
ignore_missing_imports = true
install_types = true
non_interactive = true
warn_redundant_casts = true
